// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Planet component renders correctly with alternate props 1`] = `
<div
  className="planet planet-3"
  id="test-id"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 205, 155, 0.5)",
      "boxShadow": "0 0 1rem rgba(255, 205, 155, 0.5)",
      "color": "#000000",
    }
  }
>
  <p
    className="planet-label"
  >
    Saturn
  </p>
  <div
    className="add-button"
    onClick={[Function]}
  />
</div>
`;

exports[`Planet component renders correctly with default props 1`] = `
<div
  className="planet planet-2"
  id="test-id"
  onClick={undefined}
  style={
    Object {
      "backgroundColor": undefined,
      "boxShadow": undefined,
      "color": "#FFFFFF",
    }
  }
>
  <p
    className="planet-label"
  />
  <div
    className="add-button"
    onClick={[Function]}
  />
</div>
`;
